apps/argocd/base/ingress.yaml
# argocd internal. Point /etc/hosts to this ingress
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-local
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.this
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
